[TH2-1968] Remove validation and active links