@@ -16,20 +16,14 @@
 
 package com.exactpro.th2.infraoperator;
 
-import com.exactpro.th2.infraoperator.model.box.schema.link.EnqueuedLink;
 import com.exactpro.th2.infraoperator.spec.link.Th2Link;
 import com.exactpro.th2.infraoperator.spec.link.relation.dictionaries.DictionaryBinding;
-import com.exactpro.th2.infraoperator.spec.link.relation.pins.PinCoupling;
 import com.exactpro.th2.infraoperator.spec.link.relation.pins.PinCouplingGRPC;
 
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.stream.Collectors;
-
-import static com.exactpro.th2.infraoperator.operator.StoreHelmTh2Op.EVENT_STORAGE_BOX_ALIAS;
-import static com.exactpro.th2.infraoperator.operator.StoreHelmTh2Op.MESSAGE_STORAGE_BOX_ALIAS;
 
 public enum OperatorState {
     INSTANCE;
@@ -40,69 +34,23 @@ public enum OperatorState {
         computeIfAbsent(namespace).setLinkResources(new ArrayList<>(linkResources));
     }
 
-    public void setMqActiveLinks(String namespace, List<EnqueuedLink> activeLinks) {
-        computeIfAbsent(namespace).setMqActiveLinks(new ArrayList<>(activeLinks));
-    }
-
-    public void setGrpcActiveLinks(String namespace, List<PinCouplingGRPC> activeLinks) {
-        computeIfAbsent(namespace).setGrpcActiveLinks(new ArrayList<>(activeLinks));
-    }
-
-    public void setDictionaryActiveLinks(String namespace, List<DictionaryBinding> activeLinks) {
-        computeIfAbsent(namespace).setDictionaryBindings(new ArrayList<>(activeLinks));
-    }
-
     public List<Th2Link> getLinkResources(String namespace) {
         var links = namespaceStates.get(namespace);
         return Objects.nonNull(links) ? Collections.unmodifiableList(links.getLinkResources()) : List.of();
     }
 
-    public List<PinCoupling> getAllBoxesActiveLinks(String namespace) {
+    public List<PinCouplingGRPC> getGrpLinks(String namespace) {
         var links = namespaceStates.get(namespace);
-        if (Objects.isNull(links)) {
-            return List.of();
-        }
-        List<PinCoupling> allLinks = new ArrayList<>(links.getMqActiveLinks());
-        allLinks.addAll(links.getGrpcActiveLinks());
-        return Collections.unmodifiableList(allLinks);
+        return Objects.nonNull(links) ? Collections.unmodifiableList(links.getGrpcLinks()) : List.of();
     }
 
-    public List<EnqueuedLink> getMqActiveLinks(String namespace) {
+    public List<DictionaryBinding> getDictionaryLinks(String namespace) {
         var links = namespaceStates.get(namespace);
-        return Objects.nonNull(links) ? Collections.unmodifiableList(links.getMqActiveLinks()) : List.of();
-    }
-
-    public List<PinCouplingGRPC> getGrpcActiveLinks(String namespace) {
-        var links = namespaceStates.get(namespace);
-        return Objects.nonNull(links) ? Collections.unmodifiableList(links.getGrpcActiveLinks()) : List.of();
-    }
-
-    public List<DictionaryBinding> getDictionaryActiveLinks(String namespace) {
-        var links = namespaceStates.get(namespace);
-        return Objects.nonNull(links) ? Collections.unmodifiableList(links.getDictionaryBindings()) : List.of();
-    }
-
-    public List<EnqueuedLink> getMsgStorageActiveLinks(String namespace) {
-        return getMqActiveLinks(namespace).stream()
-                .filter(queueLinkBunch -> queueLinkBunch.getTo().getBoxName().equals(MESSAGE_STORAGE_BOX_ALIAS))
-                .collect(Collectors.toUnmodifiableList());
-    }
-
-    public List<EnqueuedLink> getEventStorageActiveLinks(String namespace) {
-        return getMqActiveLinks(namespace).stream()
-                .filter(queueLinkBunch -> queueLinkBunch.getTo().getBoxName().equals(EVENT_STORAGE_BOX_ALIAS))
-                .collect(Collectors.toUnmodifiableList());
-    }
-
-    public List<EnqueuedLink> getGeneralMqActiveLinks(String namespace) {
-        return getMqActiveLinks(namespace).stream()
-                .filter(queueLinkBunch -> !queueLinkBunch.getTo().getBoxName().equals(MESSAGE_STORAGE_BOX_ALIAS)
-                        && !queueLinkBunch.getTo().getBoxName().equals(EVENT_STORAGE_BOX_ALIAS))
-                .collect(Collectors.toUnmodifiableList());
+        return Objects.nonNull(links) ? Collections.unmodifiableList(links.getDictionaryLinks()) : List.of();
     }
 
     public String getConfigChecksum(String namespace, String key) {
-        String checksum = namespaceStates.get(namespace).configChecksums.get(key);
+        String checksum = namespaceStates.get(namespace).getConfigChecksums(key);
         return checksum != null ? checksum : "";
     }
 
@@ -115,19 +63,7 @@ public enum OperatorState {
     }
 
     private NamespaceState computeIfAbsent(String namespace) {
-        return namespaceStates.computeIfAbsent(namespace, s -> new NamespaceState(namespace));
-    }
-
-    public void addActiveTh2Resource(String namespace, String resourceName) {
-        computeIfAbsent(namespace).availableTh2Resources.add(resourceName);
-    }
-
-    public void removeActiveResource(String namespace, String resourceName) {
-        computeIfAbsent(namespace).availableTh2Resources.remove(resourceName);
-    }
-
-    public boolean checkActiveTh2Resource(String namespace, String resourceName) {
-        return computeIfAbsent(namespace).availableTh2Resources.contains(resourceName);
+        return namespaceStates.computeIfAbsent(namespace, s -> new NamespaceState());
     }
 
     public interface NamespaceLock {
@@ -138,26 +74,11 @@ public enum OperatorState {
 
     public static class NamespaceState implements NamespaceLock {
 
-        private String name;
-
-        private final Set<String> availableTh2Resources;
-
         private List<Th2Link> linkResources = new ArrayList<>();
-
-        private List<EnqueuedLink> mqActiveLinks = new ArrayList<>();
-
-        private List<PinCouplingGRPC> grpcActiveLinks = new ArrayList<>();
-
-        private List<DictionaryBinding> dictionaryBindings = new ArrayList<>();
 
         private Map<String, String> configChecksums = new HashMap<>();
 
         private final Lock lock = new ReentrantLock(true);
-
-        public NamespaceState(String name) {
-            this.name = name;
-            this.availableTh2Resources = new HashSet<>();
-        }
 
         @Override
         public void lock() {
@@ -173,16 +94,20 @@ public enum OperatorState {
             return this.linkResources;
         }
 
-        public List<EnqueuedLink> getMqActiveLinks() {
-            return this.mqActiveLinks;
+        public List<PinCouplingGRPC> getGrpcLinks() {
+            List<PinCouplingGRPC> grpcLinks = new ArrayList<>();
+            for (var linkRes : linkResources) {
+                grpcLinks.addAll(linkRes.getSpec().getBoxesRelation().getRouterGrpc());
+            }
+            return grpcLinks;
         }
 
-        public List<PinCouplingGRPC> getGrpcActiveLinks() {
-            return this.grpcActiveLinks;
-        }
-
-        public List<DictionaryBinding> getDictionaryBindings() {
-            return this.dictionaryBindings;
+        public List<DictionaryBinding> getDictionaryLinks() {
+            List<DictionaryBinding> dictionaryBindings = new ArrayList<>();
+            for (var linkRes : linkResources) {
+                dictionaryBindings.addAll(linkRes.getSpec().getDictionariesRelation());
+            }
+            return dictionaryBindings;
         }
 
         public String getConfigChecksums(String key) {
@@ -191,18 +116,6 @@ public enum OperatorState {
 
         public void setLinkResources(List<Th2Link> linkResources) {
             this.linkResources = linkResources;
-        }
-
-        public void setMqActiveLinks(List<EnqueuedLink> mqActiveLinks) {
-            this.mqActiveLinks = mqActiveLinks;
-        }
-
-        public void setGrpcActiveLinks(List<PinCouplingGRPC> grpcActiveLinks) {
-            this.grpcActiveLinks = grpcActiveLinks;
-        }
-
-        public void setDictionaryBindings(List<DictionaryBinding> dictionaryBindings) {
-            this.dictionaryBindings = dictionaryBindings;
         }
 
         public void putConfigChecksums(String key, String configChecksum) {
